# python_tutor

./: .env.example  .gitignore  README.md  pyproject.toml  pytutor.db
content/tracks/: fundamentals.json
src/pytutor/: __init__.py  ai.py  auth.py  cli.py  content.py  db.py  engine.py  models.py  progress.py
src/pytutor/web/: app.py
src/pytutor/web/static/: site.css
src/pytutor/web/templates/: exercise.html  home.html  login.html  register.html  track.html
