[project]
name = "python-project-tutor"
version = "0.1.0"
description = "Interactive Python Project Tutor (CLI + Web)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "python-dotenv>=0.13",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
]

[project.scripts]
pytutor = "pytutor.cli:app"
pytutor-web = "pytutor.web.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pytutor"]
